--- a/trang1/trangmonan.html
+++ b/trang1/trangmonan.html
@@ -5,26 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="monan.css">
+    <link rel="stylesheet" href="./monan.css">
 </head>
 <body>
     <div class="page">
         <div class="menu">
         <ul>
             <li>
-        <a href="tranggioithieu.html">THÔNG TIN</a>
+        <a href="./tranggioithieu.html">THÔNG TIN</a>
             </li>
             <li>
-          <a href="trangtrochoi.html">HOẠT ĐỘNG</a>
+          <a href="./trangtrochoi.html">HOẠT ĐỘNG</a>
             </li>
             <li>
-               <a href="trangtrangphuc.html">TRANG PHỤC</a>
+               <a href="./trangtrangphuc.html">TRANG PHỤC</a>
             </li>
             <li>
                MÓN ĂN
             </li>
             <li>
-                <a href="trangbieutuong.html">BIỂU TƯỢNG</a>
+                <a href="./trangbieutuong.html">BIỂU TƯỢNG</a>
             </li>
         </ul>
 
@@ -40,7 +40,7 @@
 
 </br>  Để nấu được bánh ngon, vuông vắn thì bạn cần phải có chút kinh nghiệm và bàn tay khéo léo. Bánh được làm từ gạo nếp, đậu xanh, thịt lợn và được nấu trong nồi với thời gian khá lâu.
 </p>
-<img src="monan1.png" alt="">
+<img src="./monan1.png" alt="">
 </div>
 <div class="monancss">
 <span>
@@ -49,7 +49,7 @@
 <p>
     Gà luộc là một món ăn quen thuộc, không thể thiếu trong các mâm cỗ, nhất là trong dịp Tết. Đĩa gà luộc xuất hiện trong mâm cơm đãi khách sẽ thật nổi bật nhờ màu vàng ươm, căng bóng, thịt mềm mà da vẫn dai.
 </p>
-<img src="monan2.png" alt="">
+<img src="./monan2.png" alt="">
 </div>
 <div class="monancss">
     <span>
@@ -59,7 +59,7 @@
         Món nem rán mang đến vị ngon và giòn rụm khiến nhiều người rất ưa thích. Món ăn không chỉ được sử dụng trong mâm cỗ ngày Tết mà còn được sử dụng trong những bữa ăn hàng ngày của gia đình Việt.
     </br>Nem rán mang nhiều hương vị chua cay mặn ngọt với những nguyên liệu chính như thịt lợn, mộc nhĩ, nấm hương, rau, giá nên được coi là món ăn tượng trưng cho “quốc hồn, quốc túy”.
     </p>
-    <img src="monan3.png" alt="">
+    <img src="./monan3.png" alt="">
     </div>
     <div class="monancss">
         <span>
@@ -68,7 +68,7 @@
         <p>
             Xôi gấc là một món ăn rất được ưa chuộng, món ăn có màu đỏ tươi tượng trưng cho màu của may mắn. Xôi gấc được làm từ gạo nếp trộn lẫn với thịt quả gấc mang đến hương vị thơm ngon mà lại rất bổ dưỡng với hàm lượng vitamin A cao.
         </p>
-        <img src="monan4.png" alt="">
+        <img src="./monan4.png" alt="">
         </div>
         <div class="monancss">
             <span>
@@ -77,7 +77,7 @@
             <p>
                 Gỏi cuốn là món ăn hấp dẫn, bắt miệng với đa dạng các nguyên liệu khác nhau, tôm thịt tươi ngọt được bao bọc bởi lớp bánh tráng mềm dai, thêm 1 ít rau sống tươi xanh, chấm cùng chén nước chấm chua ngọt, chỉ muốn ăn mãi ăn mãi thôi. Món này giúp bạn giải ngấy sau khi ăn những món nhiều dầu mỡ, lại còn chứa nhiều chất dinh dưỡng.
 </p>
-            <img src="monan5.png" alt="">
+            <img src="./monan5.png" alt="">
             </div>
             <div class="monancss">
                 <span>
@@ -87,7 +87,7 @@
                     Nhìn từng miếng chả bò được xếp tươm tất trên dĩa là biết ngay không khí Tết đang ùa về, lòng nôn nao bồi hồi. Chả dai dai, đậm đà với vị ngọt tự nhiên của thịt bò quyện cùng 1 chút béo thơm của mỡ heo, chấm vào chén muối tiêu cay the, ôi thôi "chuẩn không cần chỉnh".
 
                 </p>
-                <img src="monan6.png" alt="">
+                <img src="./monan6.png" alt="">
                 </div>
                 <div class="monancss">
                     <span>
@@ -97,7 +97,7 @@
                         Đây là món ăn ngon và được sử dụng nhiều trong bữa cơm gia đình và là một phần không thể thiếu trong mâm cỗ ngày Tết. Món ăn là sự kết hợp giữa trứng, thịt kho, nước dừa rất ngon và hấp dẫn.
                     </br>Bạn có thể dùng món thịt kho Tàu ăn chung với cơm trắng hay dưa giá đều rất ngon. Tham khảo ngay công thức bên dưới để trổ tài ngay nhé, đảm bảo đúng chuẩn hương vị quê nhà đấy!
                     </p>
-                    <img src="monan7.png" alt="">
+                    <img src="./monan7.png" alt="">
                     </div>
 
 </div></br>
