--- a/trang1/trangtrangphuc.html
+++ b/trang1/trangtrangphuc.html
@@ -5,26 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="trangphuc.css">
+    <link rel="stylesheet" href="./trangphuc.css">
 </head>
 <body>
     <div class="page">
         <div class="menu">
             <ul>
                 <li>
-            <a href="tranggioithieu.html">THÔNG TIN</a>
+            <a href="./tranggioithieu.html">THÔNG TIN</a>
                 </li>
                 <li>
-          <a href="trangtrochoi.html">HOẠT ĐỘNG</a>
+          <a href="./trangtrochoi.html">HOẠT ĐỘNG</a>
                 </li>
                 <li>
                 TRANG PHỤC
                 </li>
                 <li>
-                 <a href="trangmonan.html">MÓN ĂN</a>
+                 <a href="./trangmonan.html">MÓN ĂN</a>
                 </li>
                 <li>
-                    <a href="trangbieutuong.html">BIỂU TƯỢNG</a>
+                    <a href="./trangbieutuong.html">BIỂU TƯỢNG</a>
                 </li>
             </ul>
             </div>
