--- a/trang1/trangbieutuong.html
+++ b/trang1/trangbieutuong.html
@@ -5,23 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="bieutuong.css">
+    <link rel="stylesheet" href="./bieutuong.css">
 </head>
 <body>
     <div class="page">
         <div class="menu">
         <ul>
             <li>
-        <a href="tranggioithieu.html">THÔNG TIN</a>
+        <a href="./tranggioithieu.html">THÔNG TIN</a>
             </li>
             <li>
-          <a href="trangtrochoi.html">HOẠT ĐỘNG</a>
+          <a href="./trangtrochoi.html">HOẠT ĐỘNG</a>
             </li>
             <li>
-               <a href="trangtrangphuc.html">TRANG PHỤC</a>
+               <a href="./trangtrangphuc.html">TRANG PHỤC</a>
             </li>
             <li>
-               <a href="trangmonan.html">MÓN ĂN</a>
+               <a href="./trangmonan.html">MÓN ĂN</a>
             </li>
             <li>
              BIỂU TƯỢNG
@@ -42,7 +42,7 @@
 </br></br>Đòn bánh Tét mang nhiều ý nghĩa nhân sinh cao cả. Bánh được bọc nhiều lá như hình ảnh người mẹ bao bọc lấy người con, như anh chị em một nhà đùm bọc lẫn nhau. Không chỉ vậy, bánh tét xanh nhân nhụy vàng như màu xanh của đồng quê, của đời sống an vui xóm làng, gợi về ước mơ "an cư lạc nghiệp" trong xuân mới. Tất cả những ý nghĩa đó đã đề cao sức lao động của con người, sự hòa hợp của trời đất, của con người với thiên nhiên và thể hiện sự hướng về nguồn cội.
 
     </p>
-    <img src="bieutuong1.png" alt="">
+    <img src="./bieutuong1.png" alt="">
 </div>
 <div>
     <span>2.Mâm ngũ quả</span></br>
@@ -53,19 +53,19 @@
 </br></br>Mâm ngũ quả miền Trung chịu sự giao thoa văn hóa 2 miền Bắc - Nam nên mâm ngũ quả vẫn bày biện đủ các loại quả: Chuối, mãng cầu, sung, dừa, đu đủ, xoài…
 </br></br>Người miền Nam bày mâm ngũ quả theo mong muốn “Cầu sung vừa đủ xài” ước mong năm mới đủ đầy, sung túc, tương ứng với 5 loại quả: Mãng cầu, sung, dừa, đu đủ, xoài. Ngoài ra, còn có thêm quả thơm (dứa) với mong muốn con cháu đầy nhà và một cặp dưa hấu xanh vỏ đỏ lòng để cầu may mắn.
     </p>
-    <img src="bieutuong2.png" alt="">
+    <img src="./bieutuong2.png" alt="">
 </div>
 <div>
     <span>3.Mứt Tết</span></br>
     <p>Không chỉ là món ăn chơi thơm ngon, hấp dẫn cho cả người lớn và trẻ em, nhâm nhi miếng mứt ngọt ngào bên tách trà ấm nóng từ xưa đã trở thành một thú vui ngày tết. Mứt thường được chế biến từ các loại trái cây và một số loại củ sên với đường. Các loại mứt Tết truyền thống gồm có mứt hạt sen, mứt dừa, mứt gừng, mứt bí, mứt quất,... Mỗi loại có màu sắc, hương vị đặc trưng và ý nghĩa riêng, ví dụ như mứt hạt sen thể hiện mong muốn năm mới sum họp, con cháu đầy nhà; mứt quất mang ý nghĩa cho những vận may, an lành và thịnh vượng trong năm mới,...</p>
-    <img src="bieutuong3.png" alt="">
+    <img src="./bieutuong3.png" alt="">
 </div>
 <div>
     <span>4.Câu đối đỏ</span></br>
     <p>Ngày nay, có nhiều thứ tồn tại song hành cùng Tết cổ truyền và một trong những nét văn hóa khó phai mờ ấy chính là câu đối Tết. Trước đây từ các nho học cho tới những người bình dân cũng đều trọng tục treo câu đối đỏ ngày Tết. Những câu đối này được viết bằng chữ Nho thường là màu đen hoặc vàng, trên những tấm giấy đỏ hay hồng đào cho nên thường được gọi chung là câu đối đỏ. Màu đỏ của liễn (câu đối) được dùng không ngoài mong muốn mang lại may mắn cho gia chủ.
 
     </br></br>Người xưa xem việc viết và treo câu đối là một thú vui tao nhã. Ngày xuân xưa, khi đến chúc Tết nhau trong phần quà cáp đều có được đôi câu đối tặng nhau thì thật trân quý.</p>
-    <img src="bieutuong4.png" alt="">
+    <img src="./bieutuong4.png" alt="">
 </div>
 <div>
     <span>5.Hoa mai - hoa đào</span></br>
@@ -75,7 +75,7 @@
 </br></br>Miền Bắc có hoà đào thì miền Nam có hoa mai. Màu vàng của hoa mai từ lâu được xem là màu tượng trưng cho sự giàu sang, phú quý. thể hiện mong muốn giàu sang, phú quí của gia chủ trong năm mới. Cây mai có rễ cắm sâu vào lòng đất, không bị gục ngã trước gió bão, vậy nên nó còn là biểu tượng cho phẩm chất nhẫn nại, sự bền bỉ và đức hi sinh cao cả của người Việt nói chung.
 </br></br>Những đoá mai vàng nợ rộ trong tiết xuân còn cho thấy niềm vui, niềm hân hoan, hạnh phúc, tình yêu thương, tinh thần đoàn kết và gắn bó mọi người lại với nhau.
     </p>
-    <img src="bieutuong5.png" alt="">
+    <img src="./bieutuong5.png" alt="">
 </div>
 <div>
     <span>6.Cây nêu</span></br>
@@ -83,7 +83,7 @@
         Cây nêu ở đây là cây tre, cây trúc, bương, lồ ô dài khoảng 5 - 6 mét, chặt sạch lá chỉ để lại trên ngọn nhánh lá. Theo phong tục dân gian Việt Nam, cây nêu được dựng trước sân nhà vào ngày 23 tháng chạp - ngày Táo quân lên chầu trời. Bởi từ ngày này cho tới đêm giao thừa Táo quân vắng mặt, ma quỷ thường nhân cơ hội này lẻn vào quấy nhiễu nên phải trồng cây nêu để trừ tà.
     </br></br>Trên ngọn cây có buộc nhiều thứ như túi nhỏ đựng trầu cau, ống sáo, những miếng kim loại lớn nhỏ hay treo những vật dụng có tính chất biểu tượng của địa phương, dân tộc như lá phướn, chuông gió. Khi có giỏ thổi chúng chạm vào nhau và phát ra tiếng leng keng. Người ta tin rằng, những vật treo ở cây nêu và những tiếng động là để báo hiệu cho ma quỷ biết rằng nơi đây là nhà có chủ, không được tới quấy nhiễu. Buổi tối, người ta treo thêm một chiếc đèn lồng để Tổ tiên biết đường về nhà ăn Tết với con cháu. Vì thế cây nêu dường như là cầu nối giữa đất trời, vũ trụ, giữa quá khứ, hiện tại và tương lai.
     </p>
-    <img src="bieutuong6.png" alt="">
+    <img src="./bieutuong6.png" alt="">
 </div>
 <div>
     <span>7.Phong bao lì xì</span></br>
@@ -91,7 +91,7 @@
         Lì xì là phiên âm của từ "lợi thị" trong tiếng Trung, có nghĩa là được lợi, được tiền, được may mắn. Do đó, tiền lì xì là tiền đem lại cái may mắn, điều lành, điều tốt cho trẻ em dịp đầu năm.
     </br></br>Ý nghĩa của phong bao lì xì không nằm ở số tiền mừng mà quan trọng là ở thiện ý của người tặng. Tiền lì xì thường là những món tiền nhỏ, mang ý nghĩa tinh thần nhiều hơn vật chất. Bên cạnh đó, màu đỏ của chiếc bao lì xì tượng trưng cho như ý, cát tường, thịnh vượng trong suốt cả năm. Đó cũng được coi là màu của niềm hy vọng và sự may mắn.
     </p>
-    <img src="bieutuong7.png" alt="">
+    <img src="./bieutuong7.png" alt="">
 </div>
 
         </div>
