--- a/trang1/tranggioithieu.html
+++ b/trang1/tranggioithieu.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="gioithieu.css">
+    <link rel="stylesheet" href="./gioithieu.css">
 </head>
 
 <body>
+    <script src="./index.js"></script>
     <div class="page">
 <div class="menu">
 <ul>
@@ -17,16 +18,16 @@
 THÔNG TIN
     </li>
     <li>
-  <a href="trangtrochoi.html">HOẠT ĐỘNG</a>
+  <a href="./trangtrochoi.html">HOẠT ĐỘNG</a>
     </li>
     <li>
-       <a href="trangtrangphuc.html">TRANG PHỤC</a>
+       <a href="./trangtrangphuc.html">TRANG PHỤC</a>
     </li>
     <li>
-        <a href="trangmonan.html">MÓN ĂN</a>
+        <a href="./trangmonan.html">MÓN ĂN</a>
     </li>
     <li>
-        <a href="trangbieutuong.html">BIỂU TƯỢNG</a>
+        <a href="./trangbieutuong.html">BIỂU TƯỢNG</a>
     </li>
 </ul>
 </div>
