--- a/trang1/trangtrochoi.html
+++ b/trang1/trangtrochoi.html
@@ -5,26 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="trochoi.css">
+    <link rel="stylesheet" href="./trochoi.css">
 </head>
 <body>
 <div class="page">
     <div class="menu">
         <ul>
             <li>
-        <a href="tranggioithieu.html">THÔNG TIN</a>
+        <a href="./tranggioithieu.html">THÔNG TIN</a>
             </li>
             <li>
       HOẠT ĐỘNG
             </li>
             <li>
-                <a href="trangtrangphuc.html">TRANG PHỤC</a>
+                <a href="./trangtrangphuc.html">TRANG PHỤC</a>
             </li>
             <li>
-                <a href="trangmonan.html">MÓN ĂN</a>
+                <a href="./trangmonan.html">MÓN ĂN</a>
             </li>
             <li>
-                <a href="trangbieutuong.html">BIỂU TƯỢNG</a>
+                <a href="./trangbieutuong.html">BIỂU TƯỢNG</a>
             </li>
         </ul>
         </div>
