last one i swear
also fuck off :,(

--- a/trang1/trangtrangphuc.html
+++ b/trang1/trangtrangphuc.html
@@ -64,10 +64,10 @@
         </div>
         <div class="lienket">
             <p class="topic">Liên Kết</p><br>
-            <p class="info">Halloween Nam</p><br>
-            <p class="info">Halloween Nữ</p><br>
-            <p class="info">Đồ chơi Halloween</p><br>
-            <p class="info">Trang phục hóa trang</p><br>
+            <p class="info">Áo dài Nam</p><br>
+            <p class="info">Áo dài Nữ</p><br>
+            <p class="info">Đồ chơi ngày tết</p><br>
+            <p class="info">Trang phục</p><br>
         </div>
         <div class="hotro">
             <p class="topic">HỖ TRỢ</p><br>
